Change burger menu lines rotation origin to center to prevent close X icon from getting cut off on mobile

--- a/assets/css/app-style.css
+++ b/assets/css/app-style.css
@@ -111,7 +111,7 @@
   height: 1.5px;
   background-color: #003459;
   transition: transform 0.3s ease, background-color 0.3s ease;
-  transform-origin: right;
+  transform-origin: center;
 }
 
 /* Header link override when menu is open */
